@@ -320,12 +320,6 @@
 # define __ASSUME_NETLINK_SUPPORT	1
 #endif
 
-/* For x86, support for the sysenter instruction was available in
-   2.5.53.  But the unwind information was added only in 2.5.69.  */
-#if __LINUX_KERNEL_VERSION >= 132421 && defined __i386__
-# define __ASSUME_VSYSCALL	1
-#endif
-
 /* The requeue futex functionality was introduced in 2.5.70.  */
 #if __LINUX_KERNEL_VERSION >= 132422
 # define __ASSUME_FUTEX_REQUEUE	1
